Fix resume alignment.

--- a/resume/styles.css
+++ b/resume/styles.css
@@ -2,8 +2,8 @@
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  justify-content: right;
   list-style: none;
+  justify-content: center;
   margin: 0;
   margin-top: 8px;
   padding: 0;
@@ -53,14 +53,14 @@
   font-style: italic;
 }
 
-.top-header {
+.resume-header {
   display: flex;
+  flex-direction: column;
 }
 
 .resume-title {
-  flex: 10;
-  margin: 0;
-  text-align: left;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .resume-title h1 {
